[Win] OBFV::GetIconSize() should return the value in dip unit

OpaqueBrowserFrameView::GetIconSize() returns the size of the window icon. On
Windows, the value is obtained from GetSystemMetrics(SM_CYSMICON) call, but the
problem is that the value returned is in pixel, not in dip. This leads to a
wrong sized window icon if an user is using a higher scale ratio. This CL
replaces GetSystemMetrics() with display::win::GetSystemMetricsInDIP() to fix
this.

BUG=631488
TEST=See the bug page for the reproduce steps

Review-Url: https://codereview.chromium.org/2183103002
Cr-Commit-Position: refs/heads/master@{#408017}

Former-commit-id: 9502bad0f8dd68836373a6dfc1eae65f85a6e98a